@@ -50,6 +50,8 @@ static char* stringlist047[] = { "tremulous", NULL };
 static char* stringlist048[] = { "baseq3", NULL };
 static char* stringlist049[] = { "openarena", NULL };
 static char* stringlist050[] = { "openttd", NULL };
+static char* stringlist051[] = { "q3ut4", NULL };
+static char* stringlist052[] = { "ioUrbanTerror", NULL };
 struct game games[] = {
   {
     type                : Q1_SERVER,
@@ -1026,6 +1028,38 @@ struct game games[] = {
     save_info           : quake_save_info,
     default_home        : "~/.openttd",
     command             : stringlist050,
+  },
+  {
+    type                : IOURT_SERVER,
+    flags               : GAME_CONNECT | GAME_PASSWORD | GAME_RCON | GAME_QUAKE3_MASTERPROTOCOL | GAME_Q3COLORS,
+    name                : "ioUrbanTerror",
+    default_port        : 27960,
+    default_master_port : 27950,
+    id                  : "IOURTS",
+    qstat_str           : "IOURTS",
+    qstat_option        : "-iourts",
+    qstat_master_option : "-iourtm",
+    icon                : "iourt.xpm",
+    parse_player        : q3_parse_player,
+    parse_server        : quake_parse_server,
+    analyze_serverinfo  : q3_analyze_serverinfo,
+    config_is_valid     : config_is_valid_generic,
+    exec_client         : q3_exec,
+    custom_cfgs         : quake_custom_cfgs,
+    save_info           : quake_save_info,
+    init_maps           : q3_init_maps,
+    has_map             : quake_has_map,
+    get_mapshot         : q3_get_mapshot,
+    arch_identifier     : "version",
+    identify_cpu        : identify_cpu,
+    identify_os         : identify_os,
+    cmd_or_dir_changed  : tremulous_cmd_or_dir_changed,
+    prefs_load          : q3_prefs_load_common,
+    update_prefs        : tremulous_update_prefs,
+    default_home        : "~/.ioUrbanTerror",
+    pd                  : &iourt_private,
+    main_mod            : stringlist051,
+    command             : stringlist052,
   },
   {
     type                : GPS_SERVER,
