@@ -265,3 +265,19 @@ gametype OPENARENAM new extend Q3M
     master query = empty full
     master for gametype = OPENARENAS
 end
+
+gametype IOURTS new extend Q3S
+    name = ioUrbanTerror
+    template var = IOURT
+    game rule = gamename
+end
+
+gametype IOURTM new extend Q3M
+    name = ioUrbanTerror Master
+    template var = IOURTMASTER
+    default port = 27950
+    master packet = \377\377\377\377getservers %s %s
+    master protocol = 68
+    master query = empty full
+    master for gametype = IOURTS
+end
