@@ -138,6 +138,7 @@ enum server_type {
   TREMULOUS_SERVER,
   OPENARENA_SERVER,
   OTTD_SERVER,
+  IOURT_SERVER,
   GPS_SERVER,
   UNKNOWN_SERVER
 };
