@@ -1,3 +1,7 @@
+Nov 23, 2008: Ludwig Nussel <l-n@users.sourceforge.net>
+- add ioUrbanTerror as separate game
+  (#2330187, patch by Alexander Hambalgo)
+
 Sep 13, 2008: Ludwig Nussel <l-n@users.sourceforge.net>
 - add OpenArena as separate game
 
